[Legend: complete('+') | WIP('*') | missing('-')]

-------------------------
 OpenTK 0.9.9 -> 0.9.9-1
-------------------------
+ OpenTK
    + Compute
        + Bitfields are now mapped to 'long' instead of 'int'.

-------------------------
 OpenTK 0.9.8-1 -> 0.9.9
-------------------------
+ OpenTK
	+ Compute
		+ Initial support for the OpenCL flat API.
	+ Input
		+ Keyboard/Mouse/JoystickDevice are now marked as obsolete.
	+ GameWindow
		+ New properties: Bounds, Size, Location, ClientRectangle, ClientSize, Icon.
		+ Size should now contain the correct value inside the GameWindow constructor.
		+ The GameWindow should now start at the center of the specified DisplayDevice (Windows-only at the moment).
		+ GameWindow no longer relies on Windows.Forms.
	+ Graphics
		+ Glu is now marked as obsolete.
		+ Support for multisampled contexts (Windows-only at the moment).

-------------------------
 OpenTK 0.9.8 -> 0.9.8-1
-------------------------
+ Bind
	+ Fixed wrappers for methods ending in "nv" without being "NV" extensions (e.g. Booleanv).

+ OpenTK
	+ Graphics
		+ Fixed wrappers for methods ending in "nv" without being "NV" extensions (e.g. GetBooleanv).
	+ Math
		+ Improved performance for Matrix4/Matrix4d.Mult().

+ OpenTK.Utilities
	+ TextPrinter
		+ Fixed corruption after calling TextPrinter.Clear()

---------------------
OpenTK 0.9.7 -> 0.9.8
---------------------
+ Bind
	+ Merged 3.1 specs.
	+ Function overrides are now specified in 'gloverrides.xml' instead of gl.spec. Merging updated specs should now be much easier.
	+ Bindings are now generated in alphabetical order. This makes side-by-side comparisons easier whenever the generator or the specs are updated.

+ OpenTK
	+ Audio
		+ Fixed Alc.CaptureSamples signature and added convenience overloads.
	+ Graphics
		+ Full OpenGL 3.1 support.
		+ All instances of Version* enums have now been replaced. Only a few Version12Deprecated enums remain, pertaining to the ARB_imaging subset.